adding web playable version in main folder v2

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/EscapeOrDie_itchio.loader.js";
+      var loaderUrl = buildUrl + "/EscapeOrDie_itchio_v2.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/EscapeOrDie_itchio.data.br",
-        frameworkUrl: buildUrl + "/EscapeOrDie_itchio.framework.js.br",
-        codeUrl: buildUrl + "/EscapeOrDie_itchio.wasm.br",
+        dataUrl: buildUrl + "/EscapeOrDie_itchio_v2.data.br",
+        frameworkUrl: buildUrl + "/EscapeOrDie_itchio_v2.framework.js.br",
+        codeUrl: buildUrl + "/EscapeOrDie_itchio_v2.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Play_LearnLab",
         productName: "EscapeOrDie",
