--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/EscapeOrDie_itchio_v2.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/EscapeOrDie_itchio_v2.data",
-        frameworkUrl: buildUrl + "/EscapeOrDie_itchio_v2.framework.js",
-        codeUrl: buildUrl + "/EscapeOrDie_itchio_v2.wasm",
+        dataUrl: buildUrl + "/EscapeOrDie_itchio_v2.data.unityweb",
+        frameworkUrl: buildUrl + "/EscapeOrDie_itchio_v2.framework.js.unityweb",
+        codeUrl: buildUrl + "/EscapeOrDie_itchio_v2.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Play_LearnLab",
         productName: "EscapeOrDie",
