--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/EscapeOrDie_itchio_v2.loader.js";
+      var loaderUrl = buildUrl + "/EscapeOrDie_itchio_v3.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/EscapeOrDie_itchio_v2.data.unityweb",
-        frameworkUrl: buildUrl + "/EscapeOrDie_itchio_v2.framework.js.unityweb",
-        codeUrl: buildUrl + "/EscapeOrDie_itchio_v2.wasm.unityweb",
+        dataUrl: buildUrl + "/EscapeOrDie_itchio_v3.data",
+        frameworkUrl: buildUrl + "/EscapeOrDie_itchio_v3.framework.js",
+        codeUrl: buildUrl + "/EscapeOrDie_itchio_v3.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Play_LearnLab",
         productName: "EscapeOrDie",
